# lecture-summarizer

./: .gitignore  authenticate.py  browser.py  caption_downloader.py  main.py  pyproject.toml  scraper.py  uuid_scraper.py
